# update_doc_convert_preview

./: .env  .replit  TODO.md  app.py  auth.py  email_sender.py  extensions.py  main.py  models.py  pyproject.toml  replit.md  routes.py  test_import_app.py  test_import_utils.py  utils.py
attached_assets/: Pasted-Complete-Wireframe-QR-Code-Based-Document-Storage-Management-System-with-Predictive-Analytics-1--1756352907749_1756352907752.txt
instance/: qr_document_system.db
qr_codes/: .gitkeep
scripts/: backfill_doc_numbers.py  diag_import_app.py  organize_documents.py  regenerate_all_qr.py  regenerate_out.txt
static/css/: custom.css
static/js/: analytics.js  loader.js  scanner.js
templates/: activity_logs.html  admin.html  analytics.html  base.html  dashboard.html  document_detail.html  documents.html  edit_document.html  login.html  print_document.html  print_docx.html  qr_landing.html  register.html  scan_qr.html  settings.html  update_document.html  upload.html  user_activity.html  users.html
uploads/: .gitkeep  2e066e27-205c-4c5f-af84-096e7c86401c_lab_exam.docx  37c0e2f9-485b-4a95-95fa-d82efcb70818_report-topics-TM-2025-1.docx.bak  64a5117e-ff02-474f-8231-9ec6807afbde_ISCC102_EC_Test_Instrument.docx  64a5117e-ff02-474f-8231-9ec6807afbde_ISCC102_EC_Test_Instrument.docx.bak  68da8f18-22f1-4c0a-8f3a-d898ae65fc0b_ACTIVITY_2_MODULE_4.docx.bak  9f4e31ee-31d8-4c4e-9bff-d89dee83ee62_HCI_Sylabbus_.docx  e96c6789-50ae-4fe4-88f6-57f319cf5433_ISCC102_VHH_TOS.docx
uploads/converted/: FINAL_CODE_QUEST_07_09.docx  FINAL_CODE_QUEST_07_09.docx.bak
(+1 files in other folders)
