[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.3.1",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "flask-login>=0.6.3",
    "numpy>=2.3.2",
    "werkzeug>=3.1.3",
    "sqlalchemy>=2.0.43",
    "qrcode>=8.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    # Windows-only optional dependency for Microsoft Word COM fallback (DOC/DOCX/PDF conversions)
    "pywin32>=306; platform_system == 'Windows'",
]
